Inserindo imagens que restavam

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
     </head>
     <body>
-        <div id="topo">
-            <img src="./img/section-header/iphone-5.png" id="imgIphone" >
+        <div id="topo" >
+            <img src="./img/section-header/iphone-5.png" id="imgIphone">
             <img src="./img/logo-with-shadow.png" id="logoWith" >
             <img src="./img/section-header/title.png" id="titleTopo" >
             <img src="./img/icons/hamburger.png" id="iconHamburger" >
         </div>
         <div id="meio">
-            _________2_________
+            <img src="./img/bg-about.png" id="imgTablet">
         </div>
         <div id="corpo">
-            __________3_________
+            <img src="./img/bg-portfolio.png" id="imgPortfolio">
         </div>
         <div id="donate">
             __________4_______
